--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,13 +4,23 @@ To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
-<html>
+<!DOCTYPE HTML>
+<!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-spring4-4.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
     <head>
         <title>TODO supply a title</title>
+        <link rel="stylesheet" type="text/css" th:href="@{/general.css}" />
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>TODO write content xD</div>
+
+        <div class="container">
+            <h1 class="header">Welcome!</h1>
+            <form class="form" th:action="@{/logout}" method="post">
+                <div class="form-component">
+                    <input class="button" type="submit" value="logout"/>
+                </div>
+            </form>
+        </div>
     </body>
 </html>
