--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,17 +8,27 @@ and open the template in the editor.
 <!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-spring4-4.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
     <head>
-        <title>Getting Started: Handling Form Submission</title>
+        <title>Login</title>
+        <link rel="stylesheet" type="text/css" th:href="@{/login.css}" />
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     </head>
     <body>
-        <h1>Login</h1>
-        <form th:acition="@{/login}" method="post">
-            Username: <input type="text" id="username" name="username"/>
-            Password: <input type="password" id="password" name="password"/>
-            <input type="submit"/>
-            <input type="reset" value="reset"/>
-            <input type="hidden"  th:name="${_csrf.parameterName}" th:value="${_csrf.token}"ss/>
-        </form>
+
+        <div class="container">
+            <h1 class="header">Login</h1>
+            <form class="form" th:acition="@{/login}" method="post">
+                <div class="form-component">
+                    <input placeholder="Username" type="text" id="username" name="username"/>
+                </div>
+                <div class="form-component">
+                    <input placeholder="Password" type="password" id="password" name="password"/>
+                </div>
+                <div class="form-component">
+                    <input class="button" type="submit" value="Login"/>
+                </div>
+
+                <input type="hidden"  th:name="${_csrf.parameterName}" th:value="${_csrf.token}"ss/>
+            </form>
+        </div>
     </body>
 </html>
